--- a/Discussions/references.bib
+++ b/Discussions/references.bib
@@ -302,12 +302,12 @@
       primaryClass={cs.DB}
 }
 
-@book{Pendergrast_2019, 
+@book{Pendergrast_2010, 
 	place={New York}, 
 	title={Uncommon grounds: the history of coffee and how it transformed our world}, 
 	publisher={Basic Books}, 
 	author={Pendergrast, Mark}, 
-	year={2019}
+	year={2010}
 }
 
  @article{Bhumiratana_Adhikari_Chambers_2011, 
@@ -355,4 +355,31 @@
 	volume={27}, ISSN={09644733}, DOI={10.1002/bse.2010}, number={2}, 
 	journal={Business Strategy and the Environment}, 
 	author={Rosenberg, Lauren and Swilling, Mark and Vermeulen, Walter J V}, year={2018}, month={Feb}, pages={199–214} 
+}
+
+@Manual{treemap,
+    title = {treemap: Treemap Visualization},
+    author = {Martijn Tennekes},
+    year = {2017},
+    note = {R package version 2.4-2},
+    url = {https://CRAN.R-project.org/package=treemap},
+  }
+
+@Manual{float,
+    title = {Introducing the {float} package: 32-Bit Floats for {R}},
+    author = {Drew Schmidt},
+    year = {2017},
+    note = {{R} Vignette},
+    url = {https://cran.r-project.org/package=float},
+  }
+  
+@article{xgboostpaper,
+  author = {Tianqi Chen and Carlos Guestrin},
+  title = {XGBoost: {A} Scalable Tree Boosting System},
+  journal = {CoRR},
+  volume = {abs/1603.02754},
+  year = {2016},
+  url = {http://arxiv.org/abs/1603.02754},
+  archivePrefix = {arXiv},
+  eprint = {1603.02754},
 }
