model rmd updated with better documentation

--- a/Discussions/coffee paper.Rmd
+++ b/Discussions/coffee paper.Rmd
@@ -64,7 +64,7 @@ source(paste0(here::here(),"/scripts/analyze/04_viz_data.R"), local = knitr::kni
 
 ## Introduction
 
-Coffee is consumed in every country, is the seventh most valuable agricultural product [@Pendergrast_2010], and supports the livelihood of 125 million people [@Hoffmann_2018]. In many places, the daily coffee ritual signifies a start to the day and a nod to the productive buzz it imbues its consumer. Our appreciation for coffee has helped shape a complex landscape of horticulture, chemistry, food science, and globalised import-export economics. As a result, coffee has never tasted better. Our collective understanding of coffee information has led to phenomenal quality coffee beans and annual championships celebrating the labour and toil of farmers, producers, roasters, and baristas across the world.
+Coffee is consumed in every country, is the seventh most valuable agricultural product [@Pendergrast_2010] and supports the livelihood of 125 million people [@Hoffmann_2018]. In many places, the daily coffee ritual signifies a start to the day and a nod to the productive buzz it imbues its consumer. Our appreciation for coffee has helped shape a complex landscape of horticulture, chemistry, food science, and globalised import-export economics. As a result, coffee has never tasted better. Our collective understanding of coffee information has led to phenomenal quality coffee beans and annual championships celebrating the labour and toil of farmers, producers, roasters, and baristas across the world.
 
 ### Background
 
@@ -115,7 +115,7 @@ kable(SCAA_Fake, caption="Sample SCAA Tasting Wheel Rows", booktabs = TRUE, line
 
 ![(#fig:flavorwheel) Specialty Coffee Association Taster's Flavor Wheel, (Courtesy SCA and WCR, Creative Commons Licensing)](./imgs/Coffee_Tasters_Flavor_Wheel.png){width=50%}
 
-New Tasting Notes were added each time the data collection process occurred. A total of 577 Tasting Notes presently exist within 31 Tasting Groups and 10 Tasting Traits. **Figure \@ref(fig:lollipops)** shows the number of Tasting Notes in each Tasting Group, where Tasting Traits are represented by each coloured dot. Not all Tasting Notes were observed within the dataset: some were listed by the Specialty Coffee Association Taster's Flavor Wheel, others were added in anticipation of future coffees (for example, adding "raspberry jam" after "strawberry jam" was observed in the dataset). 427 distinct Tasting Notes were observed in the dataset.
+New Tasting Notes were added each time the data collection process occurred. A total of 577 Tasting Notes exist within 31 Tasting Groups and 10 Tasting Traits. **Figure \@ref(fig:lollipops)** shows the number of Tasting Notes in each Tasting Group, where Tasting Traits are represented by each coloured dot. Not all Tasting Notes were observed within the dataset: some were listed by the Specialty Coffee Association Taster's Flavor Wheel, others were added in anticipation of future coffees (for example, adding "raspberry jam" after "strawberry jam" was observed in the dataset). 427 distinct Tasting Notes were observed in the dataset.
   
 ```{r lollipops, out.width="66%", fig.align="center", fig.cap="Hierarchy of Tasting Notes, Groups, and Traits"}
 g <- SCAA_Notes %>% group_by(Trait,Group) %>% summarise(n=n()) %>% arrange(desc(n)) 
@@ -137,7 +137,7 @@ ggplot(g, aes(x=reorder(Group, n) ,y =n, colour = Trait, fill = Trait))+
   #scale_fill_brewer(palette="PRGn") 
 ```
 
-Adding Tasting Notes to the conformed table introduces some subjectivity. While many Tasting Notes were obvious (e.g. black currant is a Berry Fruit), others were difficult to place within a single category (e.g. chocolate orange). Consideration was made to avoid adding any Tasting Traits or Tasting Groups, instead finding space within existing Tasting Groups. Furthermore, some coffee Tasting Notes were less standard, occasionally showing regionality (e.g. pouding chomeur from a Montreal roaster) or brand names (e.g. Kit-Kat). This limitation is less impactful in the model of this study, which predicted Tasting Groups rather than individual Tasting Notes, but would need to be addressed by larger dataset volume or stricter Tasting Note filters (i.e. only accepting certain standard values).
+Adding Tasting Notes to the conformed table introduces some subjectivity. While many Tasting Notes were obvious (e.g. black currant is a Berry Fruit), others were difficult to place within a single category (e.g. chocolate orange). Consideration was made to avoid adding any Tasting Traits or Tasting Groups, instead finding space within existing Tasting Groups. Furthermore, some coffee Tasting Notes were less standard, occasionally showing regionality (e.g. _pouding chomeur_ from a Montreal roaster) or brand names (e.g. Kit-Kat). This limitation is less impactful in the model of this study, which predicted Tasting Groups rather than individual Tasting Notes, but would need to be addressed by larger dataset volume or stricter Tasting Note filters (i.e. only accepting certain standard values).
 
 Additionally, the World Coffee Research program's Arabica Coffee Varieties (2019) catalog was used to help standardize coffee varieties. Because the catalog does not cover all countries within the dataset, the most frequent varieties from those countries were included in modelling. Less frequent Varieties, when valid, should be included as the dataset becomes larger. A total of 15 distinct varieties were used within the modelling process.
 
@@ -380,7 +380,7 @@ The Shiny app was deployed using shinyapps.io by RStudio and is available at: ht
 
 ## Discussion
 
-While the results of this study were limited by the size of the dataset that resulted from time constraints, the data scrapers and models developed provide a solid foundation for future research. Evaluating the significance of this work is difficult. Models for certain combinations appear to meet known expectations, and are comparable to previous work by Gagné (varietal + process to predict tasting notes) and Conley and Wilson (country to predict tasting notes). 
+While the results of this study were limited by the size of the dataset that resulted from time constraints, the data scrapers and models developed provide a solid foundation for future research. Evaluating the significance of this work is difficult. Models for certain combinations appear to meet known expectations and are comparable to previous work by Gagné (varietal + process to predict tasting notes) and Conley and Wilson (country to predict tasting notes). 
 
 Gagné produced Flavor Wheels for five common Varieties (Bourbon, SL28, Heirlooms, Caturra, Geisha) of Washed coffees, and word clouds for 14 Varieties and 11 Processes (five of which were Honey + Ripeness, and two other infrequent but well-known processes - carbonic and anaerobic). Gagné's work did not include prediction, but rather frequency visualizations of 1500 coffees. When comparing these Flavor Wheels to the model, two stand out: Kenya + SL28 + Washed is predominantly Berry Fruit with Other Fruit and Citrus Fruit Tasting Groups; similarly, Ethiopia + Heirloom + Washed is predominantly Floral with Stone Fruit and Citrus Fruit, though Black Tea was not predicted as the dominant Tasting Group. It is difficult to compare beyond SL28 and Heirloom Varieties, which appear almost exclusively in Kenya and Ethiopia, respectively. Varieties that appear throughout the world, such as Bourbon or Caturra, have much more variety in their predictions than Gagné's work, which generalizes Bourbon regardless of Processing or Country of origin.
 
