final paper push

--- a/Discussions/references.bib
+++ b/Discussions/references.bib
@@ -19,8 +19,7 @@
 }
 
 @Manual{R-knitr,
-  title = {knitr: A General-Purpose Package for Dynamic
-    Report Generation in R},
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   note = {R package version 1.30.2},
   url = {https://yihui.org/knitr/},
@@ -276,7 +275,7 @@
 @book{Hoffmann_2018, 
 	place={Buffalo, NY}, 
 	title={The world atlas of coffee: from beans to brewing -- coffees explored, explained and enjoyed}, 
-	publisher={Firefly Books Inc.}, 
+	publisher={Firefly Books, Inc.}, 
 	author={Hoffmann, James}, 
 	year={2018}
 }
@@ -295,7 +294,7 @@
 
 @misc{Datasheets,
       title={Datasheets for Datasets}, 
-      author={Timnit Gebru and Jamie Morgenstern and Briana Vecchione and Jennifer Wortman Vaughan and Hanna Wallach and Hal Daumé III au2 and Kate Crawford},
+      author={Timnit Gebru and Jamie Morgenstern and Briana Vecchione and Jennifer Wortman Vaughan and Hanna Wallach and Hal Daumé III, and Kate Crawford},
       year={2020},
       eprint={1803.09010},
       archivePrefix={arXiv},
@@ -311,34 +310,64 @@
 }
 
  @article{Bhumiratana_Adhikari_Chambers_2011, 
- 	title={Evolution of sensory aroma attributes from coffee beans to brewed coffee}, volume={44}, ISSN={00236438}, 
-	DOI={10.1016/j.lwt.2011.07.001}, number={10}, journal={LWT - Food Science and Technology}, 
-	author={Bhumiratana, Natnicha and Adhikari, Koushik and Chambers, Edgar}, year={2011}, month={Dec}, pages={2185–2192} 
+ 	title={Evolution of sensory aroma attributes from coffee beans to brewed coffee},
+ 	volume={44},
+ 	ISSN={00236438}, 
+	DOI={10.1016/j.lwt.2011.07.001}, 
+	number={10}, 
+	journal={LWT - Food Science and Technology}, 
+	author={Bhumiratana, Natnicha and Adhikari, Koushik and Chambers, Edgar}, 
+	year={2011}, 
+	month={Dec}, 
+	pages={2185–2192} 
 }
 
  @article{Conley_Wilson_2018, 
  	title={Coffee Terroir: Cupping Description Profiles and Their Impact Upon Prices in Central American Coffees}, 
-	ISSN={03432521}, DOI={http://dx.doi.org/10.1007/s10708-018-9949-1},journal={GeoJournal; Dordrecht}, 
-	author={Conley, Jamison and Wilson, Bradley}, year={2018}, pages={1–13}
+	ISSN={03432521}, 
+	DOI={http://dx.doi.org/10.1007/s10708-018-9949-1},
+	number={85},
+	journal={GeoJournal}, 
+	author={Conley, Jamison and Wilson, Bradley}, 
+	year={2018}, 
+	pages={67–79}
 }
  
  @article{Croijmans_Majid_2016, 
- 	title={Not All Flavor Expertise Is Equal: The Language of Wine and Coffee Experts}, volume={11}, 
-	ISSN={1932-6203}, DOI={10.1371/journal.pone.0155845}, number={6}, journal={PLOS ONE}, 
-	author={Croijmans, Ilja and Majid, Asifa}, editor={Simon, Sidney Arthur}, year={2016}, month={Jun}, pages={e0155845} 
+ 	title={Not All Flavor Expertise Is Equal: The Language of Wine and Coffee Experts}, 
+ 	volume={11}, 
+	ISSN={1932-6203}, DOI={10.1371/journal.pone.0155845}, 
+	number={6}, 
+	journal={PLOS ONE}, 
+	author={Croijmans, Ilja and Majid, Asifa}, 
+	year={2016}, 
+	month={Jun}, 
+	pages={e0155845} 
 }
  
  @article{Goldstein_2011, 
  	title={The “Coffee Doctors”: The Language of Taste and the Rise of Rwanda’s Specialty Bean Value}, 
-	volume={19}, ISSN={0740-9710}, DOI={10.1080/07409710.2011.544226}, number={1}, journal={Food and Foodways}, 
-	author={Goldstein, Jenny Elaine}, year={2011}, month={Jan}, pages={135–159} 
+	volume={19}, 
+	ISSN={0740-9710}, 
+	DOI={10.1080/07409710.2011.544226}, 
+	number={1}, journal={Food and Foodways}, 
+	author={Goldstein, Jenny Elaine}, 
+	year={2011}, 
+	month={Jan}, 
+	pages={135–159} 
 }
  
  @article{Traore_Wilson_2018, 
  	title={What Explains Specialty Coffee Quality Scores and Prices: A Case Study from the Cup of Excellence Program}, 
-	volume={50}, ISSN={10740708}, DOI={http://dx.doi.org/10.1017/aae.2018.5}, number={3}, 
-	journal={Journal of Agricultural and Applied Economics; Baton Rouge}, 
-	author={Traore, Togo M.  and Wilson, Norbert and Fields, Deacue}, year={2018}, month={Aug}, pages={349–368} 
+	volume={50}, 
+	ISSN={10740708}, 
+	DOI={http://dx.doi.org/10.1017/aae.2018.5}, 
+	number={3}, 
+	journal={Journal of Agricultural and Applied Economics}, 
+	author={Traore, Togo M. and Wilson, Norbert and Fields, Deacue}, 
+	year={2018}, 
+	month={Aug}, 
+	pages={349–368} 
 }
 
 @misc{Gagne,
@@ -351,10 +380,16 @@
 }
 
 @article{Rosenberg_Swilling_Vermeulen_2018, 
-	title={Practices of Third Wave Coffee: A Burundian Producer’s Perspective: Practices of Third Wave Coffee: A Burundian Producer’s Perspective}, 
-	volume={27}, ISSN={09644733}, DOI={10.1002/bse.2010}, number={2}, 
+	title={Practices of Third Wave Coffee: A Burundian Producer’s Perspective}, 
+	volume={27}, 
+	ISSN={09644733}, 
+	DOI={10.1002/bse.2010}, 
+	number={2}, 
 	journal={Business Strategy and the Environment}, 
-	author={Rosenberg, Lauren and Swilling, Mark and Vermeulen, Walter J V}, year={2018}, month={Feb}, pages={199–214} 
+	author={Rosenberg, Lauren and Swilling, Mark and Vermeulen, Walter J V}, 
+	year={2018}, 
+	month={Feb}, 
+	pages={199–214} 
 }
 
 @Manual{treemap,
@@ -382,4 +417,16 @@
   url = {http://arxiv.org/abs/1603.02754},
   archivePrefix = {arXiv},
   eprint = {1603.02754},
+}
+
+@article{Mighty_2015,
+  title = {Site suitability and the analytic hierarchy process: How GIS analysis can improve the competitive advantage of the Jamaican coffee industry},
+  journal = {Applied Geography},
+  volume = {58},
+  pages = {84-93},
+  year = {2015},
+  issn = {0143-6228},
+  doi = {https://doi.org/10.1016/j.apgeog.2015.01.010},
+  url = {https://www.sciencedirect.com/science/article/pii/S0143622815000211},
+  author = {Mario A. Mighty}
 }
